[gd_scene load_steps=7 format=3 uid="uid://baxca3ttmqgaj"]

[ext_resource type="Script" path="res://src/menu/perk_select.gd" id="1_khifm"]
[ext_resource type="Texture2D" uid="uid://qlyr03gtote8" path="res://sprites/menu/back.png" id="2_utxuj"]
[ext_resource type="Texture2D" uid="uid://cs5fehiwkpmex" path="res://sprites/menu/forward.png" id="3_tucl3"]
[ext_resource type="Script" path="res://src/menu/cursor_button.gd" id="3_xphk0"]
[ext_resource type="AudioStream" uid="uid://duqdbbnutm320" path="res://sounds/exit.wav" id="4_d21f7"]
[ext_resource type="AudioStream" uid="uid://nomwn1gytfrq" path="res://sounds/select.wav" id="4_hrrtj"]

[node name="PerkSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khifm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.156863, 0.156863, 1)

[node name="VerticalContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="HBoxContainer" parent="VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Navigation" type="VBoxContainer" parent="VerticalContainer/MainContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VerticalContainer/MainContainer/Navigation"]
texture_filter = 1
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
toggle_mode = true
icon = ExtResource("2_utxuj")
icon_alignment = 1
expand_icon = true
script = ExtResource("3_xphk0")
sound = ExtResource("4_d21f7")

[node name="ForwardButton" type="Button" parent="VerticalContainer/MainContainer/Navigation"]
texture_filter = 1
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
disabled = true
icon = ExtResource("3_tucl3")
icon_alignment = 1
expand_icon = true
script = ExtResource("3_xphk0")
sound = ExtResource("4_hrrtj")

[node name="PerksContainer" type="FlowContainer" parent="VerticalContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PlayersContainer" type="HBoxContainer" parent="VerticalContainer"]
layout_mode = 2

[connection signal="pressed" from="VerticalContainer/MainContainer/Navigation/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VerticalContainer/MainContainer/Navigation/ForwardButton" to="." method="_on_forward_pressed"]
